browser-UI-test/tests/ui/functions-execution.goml
// This test ensures that all commands in a `block {}` are executed.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
show-text: true
define-function: (
    "fn1",
    [],
    block {
        assert-css: ("header", {"background-color": "a"})
        assert-css: ("header", {"background-color": "b"})
        assert-css: ("header", {"background-color": "c"})
        assert-css: ("header", {"background-color": "d"})
        assert-css: ("header", {"background-color": "e"})
        assert-css: ("header", {"background-color": "f"})
        assert-css: ("header", {"background-color": "g"})
        assert-css: ("header", {"background-color": "h"})
        assert-css: ("header", {"background-color": "i"})
    },
)
call-function: ("fn1", {})
//~^ ERROR: [expected `a` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `b` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `c` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `d` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `e` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `f` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `g` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `h` for key `background-color`, found `rgb(17, 17, 17)`]
//~| ERROR: [expected `i` for key `background-color`, found `rgb(17, 17, 17)`]
